--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
 		{% endblock %}
 	</head>
 	<body>
+		{% include 'parts/navbar.html.twig' %}
 		{% block body %}{% endblock %}
 	</body>
 </html>
