--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,118 @@
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box
+}
+
+:root {
+    --container-width-lg: 80%;
+    --container-width-sm: 94%;
+
+    --radius-1: 2rem;
+    --radius-2: 1.2rem;
+    --radius-3: 0.8rem;
+    --radius-4: 0.5rem;
+    --radius-5: 0.3rem;
+
+    --transition: all 300ms ease;
+
+    --color-primary: #0de626;
+    --color-nav-bg: #ffffff66;
+    --color-gray-100: #ffffff;
+    --color-gray-200: #f2f2f2;
+    --color-gray-300: #d8d8d8;
+    --color-gray-400: #b2b2b2;
+    --color-gray-500: #8c8c8c;
+    --color-gray-600: #666666;
+    --color-gray-700: #3f3f3f;
+    --color-gray-800: #262626;
+    --color-gray-900: #0c0c0c;
+
+}
+
 body {
-    background-color: skyblue;
+    font-family: 'Poppins', sans-serif;
+    background: var(--color-gray-200);
+    color: var(--color-gray-800);
+    line-height: 1.7;
+    font-weight: 300;
+}
+
+p, a, figcaption {
+    font-size: 0.85rem;
+}
+
+.container {
+   width: var(--container-width-lg);
+   margin-inline: auto; 
+}
+
+img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Outfit', sans-serif;
+    line-height: 1;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+.btn {
+    background: var(--color-gray-200);
+    color: var(--color-gray-900);
+    font-weight: 500;
+    display: inline-block;
+    padding: 1rem 2.5rem;
+    border-radius: var(--radius-3);
+    width: fit-content;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.btn.sm {
+    padding: 0.4rem 1rem;
+    font-weight: 400;
+    border-radius: var(--radius-4);
+}
+
+.btn.primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.btn:hover {
+    background: var(--color-gray-900);
+    color: var(--color-gray-100);
+}
+
+section {
+    padding: 9rem 0;
+}
+
+section > h1, section > p {
+    width: 50%;
+    text-align: center;
+    margin-inline: auto;
+}
+
+section > h1 {
+    margin-bottom: 0.5rem;
+}
+
+section:nth-child(odd) {
+    background: var(--color-gray-200);
 }
