--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -116,3 +116,65 @@ section > h1 {
 section:nth-child(odd) {
     background: var(--color-gray-200);
 }
+
+
+/* ================ NAV ================  */
+nav {
+    background: var(--color-nav-bg);
+    border-bottom: 1px solid var(--color-gray-300);
+    display: grid;
+    place-items: center;
+    height: 5rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    -moz-backdrop-filter: blur(15px);
+    -o-backdrop-filter: blur(15px);
+    -ms-backdrop-filter: blur(15px);
+    z-index: 10;
+
+}
+
+.nav__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__logo {
+    color: var(--color-primary);
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-weight: bold;
+}
+
+.nav__menu, .nav__connection ul {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+}
+
+.nav__connection {
+    margin-left: 6.5rem;
+}
+
+.nav__menu a{
+    color: var(--color-gray-900);
+    font-size: 1rem;
+}
+
+.nav__toggle-open, .nav__toggle-close {
+    display: none;
+}
+
+.nav__theme-btn {
+    color: var(--color-gray-900);
+    background: transparent;
+    font-size: 1.4rem;
+    cursor: pointer;   
+}
