--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,17 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}YUMMY !
+{% endblock %}
 
 {% block body %}
 
+	<section class="featured">
+		<div class="container featured__container">
+			<h2>Recette du jour</h2>
+		</div>
+	</section>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<section class="latest">
+		<div class="container latest__container">
+			<h2>Les dernières recettes</h2>
+		</div>
+	</section>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/a-bra/OneDrive/Bureau/app-recipes/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>C:/Users/a-bra/OneDrive/Bureau/app-recipes/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+    <section class="favorites">
+		<div class="container favorites__container">
+			<h2>Top recettes</h2>
+		</div>
+	</section>    
+
 {% endblock %}
