--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,8 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link
-		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+		<!--FAVICON -->
+		<link rel="shortcut icon" href="{{ asset('images/favicon.png') }}" type="image/x-icon">		
 		<!--ICONSCOUT CDN -->
 		<link
 		rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
