--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,5 +24,6 @@
 	<body>
 		{% include 'parts/navbar.html.twig' %}
 		{% block body %}{% endblock %}
+		{% include 'parts/footer.html.twig' %}
 	</body>
 </html>
