--- a/templates/parts/footer.html.twig
+++ b/templates/parts/footer.html.twig
@@ -1,25 +1,56 @@
 <footer>
 	<div class="container footer__container">
-		<ul class="footer__menu">
-			<li>
-				<a href="{{ path('app_home') }}">Accueil</a>
-			</li>
-			<li>
-				<a href="#">Recettes</a>
-			</li>			
-			<li>
-				<a href="#contact">Contact</a>
-			</li>
-		</ul>
-		<div class="contact__form">
-			<form action="https://formsubmit.co/bravard.arnaud@gmail.com" method="post" class="contact__form">
-				<input type="text" name="Nom" placeholder="Nom">
-				<input type="text" name="Prénom" placeholder="Prénom">
-				<input type="email" name="Email" placeholder="Adresse mail">
-				<textarea rows="7" name="Message" placeholder="Votre message"></textarea>
-				<button type="submit" class="btn">Envoyer</button>
-			</form>
+		<div>
+			<ul class="footer__menu">
+				<li>
+					<a href="{{ path('app_home') }}">Accueil</a>
+				</li>
+				<li>
+					<a href="#">Recettes</a>
+				</li>
+				{% if app.user is not null %}
+					<li>
+						<a href="#">Mes recettes</a>
+					</li>
+				{% endif %}
+				<li>
+					<a href="#contact">Contact</a>
+				</li>
+			</ul>
 		</div>
+		<div class="test">
+			<ul class="footer__socials">
+				<li>
+					<a href="#" title="Youtube">
+						<i class="uil uil-youtube"></i>
+					</a>
+				</li>
+				<li>
+					<a href="#" title="Instagram">
+						<i class="uil uil-instagram"></i>
+					</a>
+				</li>
+				<li>
+					<a href="#" title="Facebook">
+						<i class="uil uil-facebook"></i>
+					</a>
+				</li>
+				<li>
+					<a href="#" title="X">
+						<i class="uil uil-twitter"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<form action="https://formsubmit.co/bravard.arnaud@gmail.com" method="post" class="contact__form">
+			<input type="text" name="Nom" placeholder="Nom">
+			<input type="text" name="Prénom" placeholder="Prénom">
+			<input type="email" name="Email" placeholder="Adresse mail">
+			<textarea rows="7" name="Message" placeholder="Votre message"></textarea>
+			<div class="contact__btn">
+				<button type="submit" class="btn">Envoyer</button>
+			</div>
+		</form>
 	</div>
 	<div class="footer__copyright">
 		<small>2024 YUMMY &copy;</small>
