feat: ajout d'une ancre dans l'onglet Contact

--- a/templates/parts/footer.html.twig
+++ b/templates/parts/footer.html.twig
@@ -42,7 +42,7 @@
 				</li>
 			</ul>
 		</div>
-		<form action="https://formsubmit.co/bravard.arnaud@gmail.com" method="post" class="contact__form">
+		<form action="https://formsubmit.co/bravard.arnaud@gmail.com" method="post" class="contact__form" id="contact">
 			<input type="text" name="Nom" placeholder="Nom">
 			<input type="text" name="Prénom" placeholder="Prénom">
 			<input type="email" name="Email" placeholder="Adresse mail">
