--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,18 +6,20 @@
 {% block body %}
 	<section class="register">
 		<div class="container register__container">
-			<h1>Register</h1>
+			<h1>Créer un compte</h1>
 
 			{{ form_errors(registrationForm) }}
 
 			{{ form_start(registrationForm) }}
+
+            {{ form_row(registrationForm.firstname) }}
+            {{ form_row(registrationForm.lastname) }}
 			{{ form_row(registrationForm.email) }}
 			{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de passe :'
         }) }}
-			{{ form_row(registrationForm.agreeTerms) }}
 
-			<button type="submit" class="btn">Register</button>
+			<button type="submit" class="btn">S'enregistrer</button>
 			{{ form_end(registrationForm) }}
 		</div>
 	</section>
