--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,22 +5,33 @@
 
 {% block body %}
 	<section class="register">
-		<div class="container register__container">
-			<h1>Créer un compte</h1>
+		<div class="container login-register__container">
+			<div class="login-register__form register__form">
+				<h1>Se créer un compte</h1>
 
-			{{ form_errors(registrationForm) }}
+				{{ form_errors(registrationForm) }}
 
-			{{ form_start(registrationForm) }}
+				{{ form_start(registrationForm) }}
+				<div class="form-group">
+					{{ form_row(registrationForm.firstname) }}
+					{{ form_row(registrationForm.lastname) }}
+					{{ form_row(registrationForm.email) }}
+					{{ form_row(registrationForm.plainPassword, {
+                    label: 'Mot de passe :'
+                    }) }}
+				</div>
+				<div class="link__form link__register">
+					<p>Déjà inscrit(e) ?
+						<a href="{{ path('app_login') }}">Se connecter</a>
+					</p>
+				</div>
 
-            {{ form_row(registrationForm.firstname) }}
-            {{ form_row(registrationForm.lastname) }}
-			{{ form_row(registrationForm.email) }}
-			{{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe :'
-        }) }}
+				<div class="btn__login-register">
+					<button type="submit" class="btn">S'enregistrer</button>
+				</div>
 
-			<button type="submit" class="btn">S'enregistrer</button>
-			{{ form_end(registrationForm) }}
+				{{ form_end(registrationForm) }}
+			</div>
 		</div>
 	</section>
 {% endblock %}
