--- a/templates/parts/navbar.html.twig
+++ b/templates/parts/navbar.html.twig
@@ -34,7 +34,7 @@
 						<a href="{{ path('app_login') }}">Se connecter</a>
 					</li>
 					<li>
-						<a href="#">S'enregistrer</a>
+						<a href="{{ path('app_register') }}">S'enregistrer</a>
 					</li>
 				{% endif %}
 
