feat: ajout d'un chemin app_register dans le lien S'enregistrer du formulaire de connexion

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,7 +43,7 @@
 
 				<div class="link__form">
 					<p>Pas encore inscrit(e) ?
-						<a href="#">S'enregistrer</a>
+						<a href="{{ path('app_register') }}">S'enregistrer</a>
 					</p>
 				</div>
 
