style: mise en forme de l'avatar de l'utilisateur connecté dans la barre de navigation

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -124,6 +124,13 @@ section:nth-child(odd) {
     color: #d11010;
 }
 
+.avatar__nav {
+    width: 3.2rem;
+    height: 3.2rem;
+    border: 2px solid var(--color-variant-primary);
+    border-radius: 50%;
+    object-fit: cover;
+}
 
 /* ================ NAV ================  */
 nav {
