feat: ajout du lien Mes Recettes dans la barre de navigation pour les utilisateurs connectés

--- a/templates/parts/navbar.html.twig
+++ b/templates/parts/navbar.html.twig
@@ -13,7 +13,7 @@
 
 			{% if app.user is not null %}
 				<li>
-					<a href="#">Mes recettes</a>
+					<a href="{{ path('app_myrecipes', {'id': app.user.id}) }}">Mes recettes</a>
 				</li>
 			{% endif %}
 
