--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -206,7 +206,7 @@ nav {
     border-radius: var(--radius-4);
 }
 
-.login-register__form input{
+.login-register__form input, .login-register__form select{
     background: transparent;
     border: 1px solid var(--color-gray-300);
     border-radius: var(--radius-3);
