--- a/templates/recipe/myrecipes.html.twig
+++ b/templates/recipe/myrecipes.html.twig
@@ -1,51 +1,62 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Recipe index{% endblock %}
+{% block title %}Liste de recettes
+{% endblock %}
 
 {% block body %}
-    <h1>Recipe index</h1>
+	<section class="myrecipes">
+		<div class="container">
+			<h1>Bienvenue
+				{{app.user.firstname}}
+				sur votre liste de recettes</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Cooking_time</th>
-                <th>Preparation_time</th>
-                <th>Serving</th>
-                <th>Difficulty</th>
-                <th>Category</th>
-                <th>Created_at</th>
-                <th>Picture</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for recipe in recipes %}
-            <tr>
-                <td>{{ recipe.id }}</td>
-                <td>{{ recipe.title }}</td>
-                <td>{{ recipe.description }}</td>
-                <td>{{ recipe.cookingTime }}</td>
-                <td>{{ recipe.preparationTime }}</td>
-                <td>{{ recipe.serving }}</td>
-                <td>{{ recipe.difficulty }}</td>
-                <td>{{ recipe.category }}</td>
-                <td>{{ recipe.createdAt ? recipe.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ recipe.picture }}</td>
-                <td>
-                    <a href="{{ path('app_recipe_show', {'id': recipe.id}) }}">show</a>
-                    <a href="{{ path('app_recipe_edit', {'id': recipe.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="11">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+			<div class="intro__myrecipes">
+				<p>C'est ici que vous retrouvez toutes vos recettes.</p>
+				<p>Pour ajouter une recette, il vous suffit de cliquer sur le bouton "Ajouter une recette" et de remplir le formulaire.</p>
+				<p>Chaque recette créée peut ensuite être consultée, modifiée ou supprimée.</p>
+			</div>
 
-    <a href="{{ path('app_recipe_new') }}">Create new</a>
+			<a href="{{ path('app_recipe_new') }}">Ajouter une recette</a>
+
+			<table
+				class="table">
+				{# <thead>
+								<tr>
+									<th>Nom</th>
+									<th>Temps de cuisson</th>
+									<th>Temps de préparation</th>
+									<th>Nombre de parts</th>
+									<th>Difficulté</th>
+									<th>Catégorie</th>
+									<th>Créée le</th>
+									<th>Photo</th>
+									<th>Actions</th>
+								</tr>
+							</thead> #}
+				<tbody>
+					{% for recipe in recipes %}
+						<tr>
+							<td>{{ recipe.id }}</td>
+							<td>{{ recipe.title }}</td>
+							<td>{{ recipe.description }}</td>
+							<td>{{ recipe.cookingTime }}</td>
+							<td>{{ recipe.preparationTime }}</td>
+							<td>{{ recipe.serving }}</td>
+							<td>{{ recipe.difficulty }}</td>
+							<td>{{ recipe.category }}</td>
+							<td>{{ recipe.createdAt ? recipe.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+							<td>{{ recipe.picture }}</td>
+							<td>
+								<a href="{{ path('app_recipe_show', {'id': recipe.id}) }}">show</a>
+								<a href="{{ path('app_recipe_edit', {'id': recipe.id}) }}">edit</a>
+								<a href="{{ path('app_recipe_delete', {'id': recipe.id}) }}">delete</a>
+							</td>
+						</tr>
+					{% else %}
+						<h2>Vous n'avez pas encore de recette...</h2>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</section>
 {% endblock %}
