style: modification de la structure de la liste des recettes

--- a/templates/recipe/myrecipes.html.twig
+++ b/templates/recipe/myrecipes.html.twig
@@ -21,35 +21,32 @@
 			<table
 				class="table">
 				{# <thead>
-								<tr>
-									<th>Nom</th>
-									<th>Temps de cuisson</th>
-									<th>Temps de préparation</th>
-									<th>Nombre de parts</th>
-									<th>Difficulté</th>
-									<th>Catégorie</th>
-									<th>Créée le</th>
-									<th>Photo</th>
-									<th>Actions</th>
-								</tr>
-							</thead> #}
+												<tr>
+													<th>Nom</th>
+													<th>Temps de cuisson</th>
+													<th>Temps de préparation</th>
+													<th>Nombre de parts</th>
+													<th>Difficulté</th>
+													<th>Catégorie</th>
+													<th>Créée le</th>
+													<th>Photo</th>
+													<th>Actions</th>
+												</tr>
+											</thead> #}
 				<tbody>
 					{% for recipe in recipes %}
 						<tr>
-							<td>{{ recipe.id }}</td>
 							<td>{{ recipe.title }}</td>
-							<td>{{ recipe.description }}</td>
-							<td>{{ recipe.cookingTime }}</td>
-							<td>{{ recipe.preparationTime }}</td>
-							<td>{{ recipe.serving }}</td>
 							<td>{{ recipe.difficulty }}</td>
 							<td>{{ recipe.category }}</td>
-							<td>{{ recipe.createdAt ? recipe.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-							<td>{{ recipe.picture }}</td>
+							<td>{{ recipe.createdAt ? recipe.createdAt|date('d/m/Y') : '' }}</td>
 							<td>
-								<a href="{{ path('app_recipe_show', {'id': recipe.id}) }}">show</a>
-								<a href="{{ path('app_recipe_edit', {'id': recipe.id}) }}">edit</a>
-								<a href="{{ path('app_recipe_delete', {'id': recipe.id}) }}">delete</a>
+								<img src="{{ asset('uploads/recipe/'~ recipe.picture) }}" alt="{{recipe.title}}" class="recipe__picture-list">
+							</td>
+							<td class="actions">
+								<a href="{{ path('app_recipe_show', {'id': recipe.id}) }}">{{ ux_icon('healthicons:magnifying-glass') }}</a>
+								<a href="{{ path('app_recipe_edit', {'id': recipe.id}) }}">{{ ux_icon('line-md:edit') }}</a>
+								<a href="{{ path('app_recipe_delete', {'id': recipe.id}) }}">{{ ux_icon('weui:delete-filled') }}</a>
 							</td>
 						</tr>
 					{% else %}
