feat: ajout d'une route pour confirmer la suppression d'une recette

--- a/templates/recipe/myrecipes.html.twig
+++ b/templates/recipe/myrecipes.html.twig
@@ -49,7 +49,7 @@
 									<a href="{{ path('app_recipe_edit', {'id': recipe.id}) }}" class="action-edit" title="Modifier la recette">{{ ux_icon('iconamoon:edit') }}</a>
 								</div>
 								<div class="action-item">
-									<a href="{{ path('app_recipe_delete', {'id': recipe.id}) }}" class="action-delete" title="Supprimer la recette">{{ ux_icon('weui:delete-filled') }}</a>
+									<a href="{{ path('app_confirm_delete', {'id': recipe.id}) }}" class="action-delete" title="Supprimer la recette">{{ ux_icon('weui:delete-filled') }}</a>
 								</div>
 							</td>
 
