--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -32,6 +32,7 @@
     --color-gray-700: #3f3f3f;
     --color-gray-800: #262626;
     --color-gray-900: #0c0c0c;
+    --color-alert: #d11010;
 
 }
 
@@ -121,7 +122,7 @@ section:nth-child(odd) {
 }
 
 .alert {
-    color: #d11010;
+    color: var(--color-alert);
 }
 
 .avatar__nav {
@@ -455,3 +456,70 @@ td.actions {
 }
 
 
+/* ================ CONFIRM DELETE ================  */
+.delete h1 {
+    margin-bottom: 5rem;
+}
+
+.delete__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.delete__title > div {
+    border-radius: var(--radius-5);
+    padding-block: 2.5rem;
+    padding-inline: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0rem 2rem 3rem rgba(255, 0, 0, 0.2);
+}
+
+.delete__title h2 {
+    margin-top: 1.5rem;
+}
+
+.delete__title img{
+    width: 8rem;
+    height: 8rem;
+    border-radius: var(--radius-4);
+}
+
+.warning {
+    margin-top: 5rem;
+    color: var(--color-alert);
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.confirm__delete {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+}
+
+.btn-danger {
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--color-alert);
+    color: var(--color-gray-100);
+    font-weight: 700;
+    font-size: 1rem;
+    padding: 1.2rem;
+    border-radius: var(--radius-3);
+    margin-inline: 0.8rem;
+    margin-right: 0.5rem;
+    cursor: pointer;
+}
+
+.cancel__link {
+    background-color: var(--color-variant-primary);
+    color: var(--color-gray-100);
+    font-weight: 700;
+    padding: 1.2rem;
+    border-radius: var(--radius-3);
+    margin-inline: 0.8rem;
+}
